feat: add pod bandwidth limits
